<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".view.AuthorizationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/mater_dei"
            android:contentDescription="@string/app_desc_img_background"
            />

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:src="@drawable/ic_launcher"
            android:contentDescription="@string/app_desc_logo"
            app:layout_constraintBottom_toTopOf="@id/titleTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.102" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:text="@string/authorization_title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="28sp"
            app:layout_constraintBottom_toTopOf="@id/timeTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/logoImageView" />

        <TextView
            android:id="@+id/timeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/playfair_display"
            android:text="@string/authorization_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@id/msgTextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/titleTextView" />

        <TextView
            android:id="@+id/msgTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/authorization_msg"
            android:fontFamily="@font/playfair_display"
            android:textAlignment="center"
            android:textColor="#1E0AB4"
            android:textSize="18sp"
            app:layout_constraintTop_toBottomOf="@id/timeTextView"
            app:layout_constraintBottom_toTopOf="@id/buttonPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <!--<ImageView
            android:id="@+id/fingerprintButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_fingerprint_btn"
            android:scaleX="1.5"
            android:scaleY="1.5"
            app:layout_constraintTop_toBottomOf="@id/msgTextView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/biometric_button"
            />-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/msgTextView">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/agreeBtn"
                android:layout_width="@dimen/width_horizontal_button"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/light_green_color"
                android:elevation="@dimen/elevation_btn"
                android:fontFamily="@font/playfair_display"
                android:text="@string/authorization_agree_btn"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/cancelBtn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelBtn"
                android:layout_width="@dimen/width_horizontal_button"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/red_color"
                android:elevation="@dimen/elevation_btn"
                android:fontFamily="@font/playfair_display"
                android:text="@string/authorization_cancel_btn"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/agreeBtn"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>