<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F8F6F4"
        >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/ic_launcher"
            android:scaleType="center"
            android:alpha="0.2"
            android:contentDescription="@string/app_desc_logo"
            />

        <!--<ScrollView
            android:id="@+id/listScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@id/infoPanel"
            android:layout_below="@id/exitPanel"
            android:layout_marginStart="@dimen/margin_layout"
            android:layout_marginTop="@dimen/margin_layout"
            android:layout_marginEnd="@dimen/margin_layout"
            android:layout_marginBottom="@dimen/margin_layout">-->

        <LinearLayout
            android:id="@+id/listPanel"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="@dimen/margin_layout"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/infoPanel"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="8"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/title_margin"
                android:fontFamily="@font/oleo_script_swash_caps"
                android:gravity="center"
                android:text="@string/home_title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/title_text" />

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/registerRecyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:nestedScrollingEnabled="false"
                    />

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

        <!--</ScrollView>-->

        <LinearLayout
            android:id="@+id/infoPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/listPanel"
            app:layout_constraintBottom_toTopOf="@id/buttonPanel"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"
            >

            <TextView
                android:id="@+id/infoTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/home_punch_title"
                android:gravity="center"
                android:textAlignment="center"
                android:textSize="@dimen/title_text"
                android:textColor="@color/black"
                android:fontFamily="@font/oleo_script_swash_caps"
                />

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/buttonPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_layout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/infoPanel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_weight="1"
            >

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/punchInBtn"
                android:layout_width="@dimen/width_horizontal_button"
                android:layout_height="wrap_content"
                android:text="@string/home_punch_in"
                android:textStyle="bold"
                android:fontFamily="@font/playfair_display"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/white"
                android:backgroundTint="@color/dark_blue_color"
                android:elevation="@dimen/elevation_btn"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/punchOutBtn"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/punchOutBtn"
                android:layout_width="@dimen/width_horizontal_button"
                android:layout_height="wrap_content"
                android:text="@string/home_punch_out"
                android:textStyle="bold"
                android:fontFamily="@font/playfair_display"
                android:textAppearance="?attr/textAppearanceButton"
                android:textColor="@color/white"
                android:backgroundTint="@color/light_green_color"
                android:elevation="@dimen/elevation_btn"
                app:layout_constraintStart_toEndOf="@id/punchInBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>